packages/optimizer/core/src/snapshots/qwik_core__test__should_inline_component_const_literal_forms.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const Cmp = component$(() => {
	const size = 42, seed = Math.random();
	const variant = 'primary' as const;
	const label = variant;
	const style = { label, seed };
	return <button data-size={size.toFixed(1)} data-variant={label} style={style} />;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");
//
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAMhB\"}")
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
export const Cmp_component_4ryKJTOKjWE = ()=>{
    const seed = Math.random();
    const style = {
        label: 'primary',
        seed
    };
    return /*#__PURE__*/ _jsxSorted("button", {
        "data-size": 42..toFixed(1),
        style: style
    }, {
        "data-variant": 'primary'
    }, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B;IAC7B,MAAiB,OAAO,KAAK,MAAM;IAGnC,MAAM,QAAQ;QAAE,OAFA;QAEO;IAAK;IAC5B,qBAAO,WAAC;QAAO,aAAW,AAJb,IAIkB,OAAO,CAAC;QAAyB,OAAO;;QAA5B,gBAH3B;;AAIjB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    303
  ]
}
*/
== DIAGNOSTICS ==

[]
