packages/optimizer/core/src/snapshots/qwik_core__test__should_keep_capture_free_sync_handler_direct_when_sibling_moves_captures.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, sync$, useSignal } from '@qwik.dev/core';

export default component$(() => {
  const count = useSignal(0);
  return (
    <script
      document:onQInit$={sync$(() => console.log('init'))}
      document:onClick$={() => count.value++}
    />
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,6BAAe,2CAQZ\"}")
============================= test.tsx_test_component_script_q_d_click_V5GwvMXZSmQ.js (ENTRY POINT)==

export const test_component_script_q_d_click_V5GwvMXZSmQ = (_, _1, count)=>count.value++;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"2DAQyB,gBAAM,MAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_script_q_d_click_V5GwvMXZSmQ",
  "entry": null,
  "displayName": "test.tsx_test_component_script_q_d_click",
  "hash": "V5GwvMXZSmQ",
  "canonicalFilename": "test.tsx_test_component_script_q_d_click_V5GwvMXZSmQ",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "document:onClick$",
  "captures": false,
  "loc": [
    237,
    256
  ],
  "paramNames": [
    "_",
    "_1",
    "count"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _qrlSync } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_test_component_script_q_d_click_V5GwvMXZSmQ = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_script_q_d_click_V5GwvMXZSmQ"), "test_component_script_q_d_click_V5GwvMXZSmQ").m();
//
export const test_component_LUXeXe0DQrg = ()=>{
    const count = useSignal(0);
    return /*#__PURE__*/ _jsxSorted("script", {
        "q-d:qinit": _qrlSync(()=>console.log('init'), '()=>console.log("init")'),
        "q:p": count
    }, {
        "q-d:click": q_test_component_script_q_d_click_V5GwvMXZSmQ
    }, null, 6, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;0CAG0B;IACxB,MAAM,QAAQ,UAAU;IACxB,qBACE,WAAC;QAAD,WAGE,WAFyB,IAAM,QAAQ,GAAG,CAAC;;;QAD7C,WAGE;;AAEN\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    92,
    271
  ]
}
*/
== DIAGNOSTICS ==

[]
